--- a/Source/UnificaMagica/UnificaMagica.csproj
+++ b/Source/UnificaMagica/UnificaMagica.csproj
@@ -42,6 +42,9 @@
     <Reference Include="CompSlotLoadable">
       <HintPath>..\..\..\JecsTools\Assemblies\CompSlotLoadable.dll</HintPath>
     </Reference>
+    <Reference Include="CompToggleDef">
+      <HintPath>..\..\..\JecsTools\Assemblies\CompToggleDef.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -62,13 +65,10 @@
     <Compile Include="Building_PlantGrower.cs" />
     <Compile Include="Building_WizardTurret.cs" />
     <Compile Include="CompAbilityUserWizard.cs" />
-    <Compile Include="CompProperties_ToggleDef.cs" />
     <Compile Include="CompProperties_WizardTech.cs" />
-    <Compile Include="CompToggleDef.cs" />
     <Compile Include="CompWizardTech.cs" />
     <Compile Include="HarmonyPatches.cs" />
     <Compile Include="Helpers.cs" />
-    <Compile Include="ITab_ToggleDef.cs" />
     <Compile Include="ITab_Wizard.cs" />
     <Compile Include="JobDriver_StudyWizardry.cs" />
     <Compile Include="ModBeamMeshMaker.cs" />
@@ -77,13 +77,13 @@
     <Compile Include="Projectile_Zap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThoughtWorker_NotWizardUsing.cs" />
-    <Compile Include="ToggleDefCardUtility.cs" />
     <Compile Include="UMAbilityDef.cs" />
     <Compile Include="UMCompFacility.cs" />
     <Compile Include="UMCompProperties_Facility.cs" />
     <Compile Include="uminterfaces.cs" />
     <Compile Include="UnificaMagicaDefOf.cs" />
     <Compile Include="UnificaMagicaUI.cs" />
+    <Compile Include="Verb_Blink.cs" />
     <Compile Include="Verb_FueledShot.cs" />
     <Compile Include="WizardCardUtility.cs" />
     <Compile Include="WizardPill.cs" />
