Incomplete update to v1.1.
Mostly works. But have not playtested it. Basically, just got it to
compile and run w/o errors and then fixed a few things.

- Sparks spell does not expire
- pants do not work yet (not tested): exploding and entangling
- engtangling wand does not work

--- a/Source/UnificaMagica/UnificaMagica.csproj
+++ b/Source/UnificaMagica/UnificaMagica.csproj
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+
+  <PropertyGroup>
+    <TargetFramework>net472</TargetFramework>
+  </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -9,7 +13,6 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>UnificaMagica</RootNamespace>
     <AssemblyName>UnificaMagica</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -30,30 +33,39 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="0Harmony">
-      <HintPath>..\..\..\GlobalAssemblies\0Harmony.dll</HintPath>
-    </Reference>
-    <Reference Include="AbilityUser">
-      <HintPath>..\..\..\JecsTools\Assemblies\AbilityUser.dll</HintPath>
-    </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\GlobalAssemblies\Assembly-CSharp.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.CoreModule">
+      <HintPath>..\..\..\GlobalAssemblies\UnityEngine.CoreModule.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Core" />
+    <Reference Include="UnityEngine.UI">
+      <HintPath>..\..\..\GlobalAssemblies\UnityEngine.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine">
+      <HintPath>..\..\..\GlobalAssemblies\UnityEngine.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.IMGUIModule">
+      <HintPath>..\..\..\GlobalAssemblies\UnityEngine.IMGUIModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.InputLegacyModule">
+      <HintPath>..\..\..\GlobalAssemblies\UnityEngine.InputLegacyModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.InputModule">
+      <HintPath>..\..\..\GlobalAssemblies\UnityEngine.InputModule.dll</HintPath>
+    </Reference>
+    <Reference Include="0Harmony">
+      <HintPath>..\..\..\..\..\Library\Application Support\Steam\steamapps\workshop\content\294100\2009463077\v1.1\Assemblies\0Harmony.dll</HintPath>
+    </Reference>
+    <Reference Include="AbilityUser">
+      <HintPath>..\..\..\..\..\Library\Application Support\Steam\steamapps\workshop\content\294100\932008009\Assemblies\AbilityUser.dll</HintPath>
+    </Reference>
     <Reference Include="CompSlotLoadable">
-      <HintPath>..\..\..\JecsTools\Assemblies\CompSlotLoadable.dll</HintPath>
+      <HintPath>..\..\..\..\..\Library\Application Support\Steam\steamapps\workshop\content\294100\932008009\Assemblies\CompSlotLoadable.dll</HintPath>
     </Reference>
     <Reference Include="CompToggleDef">
-      <HintPath>..\..\..\JecsTools\Assemblies\CompToggleDef.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\GlobalAssemblies\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\..\..\Library\Application Support\Steam\steamapps\workshop\content\294100\932008009\Assemblies\CompToggleDef.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
